--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,11 +7,11 @@
   align-content: center;
   padding: 20px 0 20px 0;
   background: @headerBackground;
-//   position: fixed;
-// // //   top: 0;
-// //   left: 0;
-// //   right: 0;
-//   z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 
   h1 {
     font-size: 4rem;
